@@ -16,7 +16,7 @@ Depends: zentyal-core (>= 3.2), zentyal-core (<< 3.3), zentyal-network,
          libdate-calc-perl, libnet-dns-perl,
          libauthen-krb5-easy-perl (>= 0.91-1),
          libclamav-client-perl, libnet-ntp-perl, libuuid-perl,
-         libfile-libmagic-perl, libsamba-perl (>=0.08),
+         libfile-libmagic-perl, libsamba-perl (>=0.09),
          libparse-recdescent-perl, libxs-object-magic-perl,
          libdata-hexdumper-perl, libsys-filesystem-perl,
          samba4 (>= 4.1.1-zentyal1), ${misc:Depends}
